# distributed-api

./: .clangd  CMakeLists.txt  README.md  default.nix  flake.nix  justfile  overlay.nix  pyproject.toml
http-p2p-proxy/: http-p2p-proxy.cabal
http-p2p-proxy/app/: Main.hs
http-p2p-proxy/lib/: UNIXPeer.hs
include/peer/: addr_iter.hh  epoll_event_loop.hh  event_handler.hh  event_loop.hh  merkle.hh  node.hh  peer.hh  tcp_handler.hh  unix_socket.hh
libpeer/: CMakeLists.txt  addr_iter.cc  epoll_event_loop.cc  epoll_wrapper.cc  epoll_wrapper.hh  event_loop.cc  geodata.hh  node.cc  peer.cc  peer_communication_protocol.hh  routing_table.hh  socket_wrapper.cc  socket_wrapper.hh  tcp_handler.cc  unix_socket.cc  unix_socket.hh
scripts/http-p2p-proxy/: default.nix  derivation.nix  main.py  setup.py
scripts/http-p2p-proxy/templates/: index.html
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  test.cc
